# patent-breakthrough

./: .gitattributes  .gitignore  .mypy.ini.swp  .pylintrc  LICENSE  MANIFEST.in  README.md  main.ipynb  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
docembedder/: __init__.py  _version.py  analysis.py  analysis2.py  base.py  bert.py  bpemb.py  classification.py  countvec.py  datamodel.py  doc2vec.py  embedding_utils.py  preparation.py  pretrained_run.py  save2file.py  simspec.py  tfidf.py  typing.py  utils.py  visualization.py
docembedder/hyperopt/: __init__.py  parallel.py  utils.py
docembedder/models/: __init__.py  base.py  bert.py  bpemb.py  countvec.py  doc2vec.py  tfidf.py  utils.py
docembedder/preprocessor/: README.md  __init__.py  conversion.py  oldprep.py  parser.py  preprocessor.py  reassembler.py  test.py
docs/: analysis.md  classification.md  datamodel.md  hyperparameter.md  models.md  preprocessors.md  simulation_specification.md
examples/: benchmark-doc2vec-size50-mincount.ipynb  benchmark-doc2vec.ipynb  benchmark-tfidf.ipynb  classification benchmark.ipynb  cpc-novelty-impact.ipynb  hyper-countvec.ipynb  hyperopt-example.ipynb  hyperopt-tfidf.ipynb  impact.ipynb  impacts_novelty.ipynb  main.ipynb  model_comparison.ipynb  old-tfidf.ipynb  preprocessor-comparison.ipynb  setup.ini  utils.py  walkthrough.ipynb  webdav.ipynb
examples/data/: greek.txt  stopwords.txt  symbols.txt
examples/hyperopt/: example_setup.ini  hyperopt-bert.ipynb  (+5 more)
models/: document_embeddings.dill  document_embeddings.model  test_document_embeddings.dill
preprocessor/: README.md  preprocessor.py
scripts/: create-embeddings.py  create_embeddings.py  create_novelty_impact.py  create_test_embeddings.py  init_windows.py  run.sh  test-settings.json  test_workflow.nf  tfidf.json
tests/: test_analysis.py  test_bert.py  test_bpemb.py  test_classification.py  test_datamodel.py  test_doc2vec.py  test_hyperopt.py  test_models.py  test_parser.py  test_preprocessor.py  test_save2file.py  test_tfidf.py  test_utils.py
(+15 files in other folders)
