[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "docembedder"
authors = [
    { name = "Raoul Schram", email = "r.d.schram@uu.nl" },
    { name = "Shiva Nadi", email = "s.nadinajafabadi@uu.nl" },
    { name = "Maarten Schermer", email = "m.d.schermer@uu.nl" },
    { name = "Jelle Treep", email = "h.j.treep@uu.nl" }
]
description = "Package for creating document embeddings of patents and analysis tools."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["patents", "embeddings", "machine learning"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "torch",
    "torchvision",
    "transformers",
    "sentence-transformers",
    "pandas",
    "dill",
    "nltk",
    "gensim",
    "bpemb",
    "polars>=0.16",
    "pyarrow",
    "matplotlib",
    "tqdm",
    "h5py",
    "hyperopt"
]

dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/UtrechtUniversity/patent-breakthrough"
documentation = "https://github.com/UtrechtUniversity/patent-breakthrough/tree/main/docs"

[tool.setuptools]
packages = ["docembedder"]

[tool.setuptools_scm]
write_to = "docembedder/_version.py"

[tool.pylint.'MASTER']
ignore-patterns="_version.py,oldprep.py,countvec.py"

[tool.pylint.'FORMAT']
max-line-length=100
max-locals=35
max-args=10

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "pandas.*",
    "sklearn.*",
    "dill.*",
    "sentence_transformers.*",
    "nltk.*",
    "gensim.*",
    "bpemb.*",
    "h5py.*",
    "matplotlib.*",
    "hyperopt.*",
]
ignore_missing_imports = true
